--- a/VRChat/16/1067316.html
+++ b/VRChat/16/1067316.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "7HUSwMPagMUzg43qUcHZHAN2aD7jgnhkSzeHLzFBjpU="></script>
+    "6H14sv9BVmz663dy8CKnaPqQq1yrKmX40tjUYp2rkC4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オフィスハット・タウンハット・フォーマルハットの詰め合わせ","description":"今回、帽子の様々なことについて勉強をし、\nその結果制作されたものです。\n帽子をしっかりと着こなし、場面に合わせて活用していこう","url":"https://booth.pm/ja/items/1067316","offers":{"priceCurrency":"JPY","@type":"Offer","price":"540"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1067316/a94da910-ff2a-494b-8da6-cd13c79aef3a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7HUSwMPagMUzg43qUcHZHAN2aD7jgnhkSzeHLzFBjpU="></script>
+    nonce="6H14sv9BVmz663dy8CKnaPqQq1yrKmX40tjUYp2rkC4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1067316/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               253
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1067316/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               253
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
