--- a/VRChat/72/1116272.html
+++ b/VRChat/72/1116272.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "j04/6XBNnZ+JW/dXbanoVvBs1WVM0clmSEtwCPZPVlo="></script>
+    "MkHctfbg+8fgY5RL+oj0SzRFOQQFt3hzHIrGQENrXE4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ブーツ『kurousapunks』 - over the petal　△900","description":"――　お知らせ　――\n3/13 update　軽微なポリゴンの調整を行いました。\n――――――――――\n\nシューズブランド\"over the petal\"より新作ブーツ『kurousapunks』の入荷です！\n△900なので様々なアバターに履いていただけるようになっております。\n\n3月8,9,10日に開催しておりましたバーチャルマーケット2のis3ブース展示アイテムの1つです！\n\n『暑い日も寒い日もどちらでもない日もkurousapunksで楽しくかわいくかっこよく！　今日も明日も明後日も歩くのが楽しみ！』\n\n\nデータ内には\nkurousapunks.fbx(ブーツ本体)\nkurousapunks.unitypackage\nreadme.txt\ntextureフォルダ\n　┗Albedo,Metallic,Normalテクスチャ(全て512*512)\n\nが含まれております。\n使用前にreadme.txtをお読みくださいますようお願いします。\n","url":"https://booth.pm/ja/items/1116272","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"200","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/013f360b-9e6b-4ab6-813d-0e93f9b046db/i/1116272/0751729c-6191-4a1b-a62d-d84e46dea71c_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="j04/6XBNnZ+JW/dXbanoVvBs1WVM0clmSEtwCPZPVlo="></script>
+    nonce="MkHctfbg+8fgY5RL+oj0SzRFOQQFt3hzHIrGQENrXE4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -123,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -137,7 +136,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -180,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1116272/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               305
@@ -195,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1116272/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               305
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
