--- a/VRChat/97/1113097.html
+++ b/VRChat/97/1113097.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "C4v2WOA/KnTqfwzAP/zgBsyvTeBd+UAQn11UNOWtPzo="></script>
+    "6dKRNK3fdQEDE8Mdbfax56Zue7NOWiZ1rTXbKAbQA5k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【素体付き】Star siesta - 着せ替え用コスチューム","description":"●モデル説明\n【3Dモデル】Star siesta - 着せ替え用コスチューム\n制作者：ひるね\n\nポリゴン数：△10096\nマテリアル数：4個\n\nVRChat用のhumanoid対応\nフルボディトラッキング対応\nデスクトップモーション対応モデル同梱\n（VRChat内でしゃがみモーションをした際に腰が逆くの字に折れ難いようにボーンを配置しています）\n\n3Dモデルの着せ替え用に制作されたモデルです、頭部のオブジェクトは同梱されていません\n他の改変可能な3Dモデルと組み合わせてご利用ください\n\n※モデル説明の下に利用規約が記載されているので必ず目を通してから購入をお願いします\n\n\n●内容物\n・Star siesta.Unitypackage\n　スカートのDynamicBoneやマテリアルのシェーダーを設定済みのUnitypackageです\nMnMrShader1_3を同梱してありますので既に導入済みの方はインポートする際にチェックボックスを外してください\n\n・Star siesta.fbx\n　フルボディトラッキング対応のモデルデータです\n\n・Star siesta Desktop.fbx\n　デスクトップモーション対応のモデルデータです\n　VRモードでも利用できますが、ボーン配置の関係でフルボディトラッキングの適正は低いです\n\n・基本テクスチャ（.png 14種　.psd 4種）\n　衣装カラーやソックス、スパッツの差分をいくつか用意してます\n　.psdデータ内にUV展開図も同梱されています、色改変や模様をいれたりする場合の参考にどうぞ\n\n・Animationデータ 5種\n　VRChatで使える指のAnimationデータです\n　fingerpoint,handopen,hundgun,thumbsup,victory、の5種類を同梱しています\n\n・簡易着せ替えチュートリアル.txt\n　最下部に同じ内容のものを記載しています\n\n・Readme.txt\n　利用規約のテキストです\n　下部にも同じ内容の利用規約文を記載しているので、必ず目を通してから購入をお願いします","url":"https://booth.pm/ja/items/1113097","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/4d603a5d-0611-4e3c-833c-41454379f04e/i/1113097/a6a12f50-7cd1-43f7-88af-c0aa6cedaad4_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="C4v2WOA/KnTqfwzAP/zgBsyvTeBd+UAQn11UNOWtPzo="></script>
+    nonce="6dKRNK3fdQEDE8Mdbfax56Zue7NOWiZ1rTXbKAbQA5k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -123,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -137,7 +136,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -178,7 +178,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1113097/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               166
@@ -193,14 +193,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1113097/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               166
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
