--- a/VRChat/73/1115273.html
+++ b/VRChat/73/1115273.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "HP+t9fysps6NXsmi6D9Bgb8enKeWAonfsD4zy3ie3CQ="></script>
+    "TBowuLkvBefUm92FfgtSb+IniWE5W6oj8Se1kisYILU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"katana　94polygon","description":"VRChat向けにポリゴン数が少ないモデルがあったらいいかなと思い、制作しました。\n\n【内容物】\n・katana.fbx\n・katana_tex.png\n・ReadMe.txt\n\n【許可】\nメッシュ、テクスチャの変更\n動画、ゲームでの個人使用\n営利目的の使用\n\n【不可】\n再配布、販売不可\n\n\n【免責事項】\nいかなる場合においても、モデルの使用によって生じた問題に対して責任を負いかねます。ご使用の際は自己責任でお願いします。\n\nカジノス工房","url":"https://booth.pm/ja/items/1115273","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/f7b53d9b-7b48-4cc4-be85-618635a7d239/i/1115273/902fdc9f-e923-435a-a047-de733f5a5336_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HP+t9fysps6NXsmi6D9Bgb8enKeWAonfsD4zy3ie3CQ="></script>
+    nonce="TBowuLkvBefUm92FfgtSb+IniWE5W6oj8Se1kisYILU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1115273/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1115273/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
