--- a/VRChat/21/1111621.html
+++ b/VRChat/21/1111621.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xiHCs5vFlLcUrjOIFhxnRr/P8IzgpTxS+yX24LLQBnI="></script>
+    "kIuLUYG91JhklCNlN8Oi/KdRLOeTYY0q/saofGWEo+w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"電動マッサージ機","description":"■VRchat等で使用することを想定して作られたパンダ帽子です\n\n■ガバが目立ちます\n\n■ポリゴン数：1228\n\n■細かいことVRchat推奨　改造可　商用利用可　\n\n■禁止事項：自作発言（改造品含む）\n\n　電気で動くマッサージ機をイメージして作りました。アバターの肩こり等にお使いください","url":"https://booth.pm/ja/items/1111621","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/565e6dcd-600c-4884-8a13-2faabbfd8cdf/i/1111621/d2c3123b-1b62-4368-a320-745db34034e2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xiHCs5vFlLcUrjOIFhxnRr/P8IzgpTxS+yX24LLQBnI="></script>
+    nonce="kIuLUYG91JhklCNlN8Oi/KdRLOeTYY0q/saofGWEo+w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1111621/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               366
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1111621/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               366
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
