--- a/VRChat/01/1110501.html
+++ b/VRChat/01/1110501.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "12xp/8MuOFsKWQMoKKofdx+Q66FFYMXPzCgBQdRyFDg="></script>
+    "LzkkiC6uyRAOUAjQ0cN4qE4CT+8Sd4xwuZRisvabjrc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Null's Trail 2 ver1.1","description":"UnityのTrail Renderer用のシェーダー四種セット\nMaterialやPrefabを設定済みだからすぐ使えます\n\n◇利用規約◇\n\n対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。\nただし下記を禁止します。\n・他人が利用できるようにし、著作者の販売を阻害すること。\n・コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。\n\nその他\n・コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。\n・利用権利は他人に譲渡することができません。\n\nこのライセンスにおける解説情報は下記になります。\nhttps://gitlab.com/towelfunnelvrc/towel-license/wikis/\n（タオルライセンス 販売用 version0.9）\n\n\n◇内容物◇\n\n・TrailCubeプレハブ　――　キューブがぶわぁっと出てくる\n\n・TrailMultiplicationプレハブ　――　ぐにゃぐにゃのトレイルが8本出てくる\n\n・TrailParticleプレハブ　――　GPUパーティクルをまき散らす。初期設定では0.5m以上近づくと消える\n\n・TrailTetrahedrallプレハブ　――　四面体状のGPUパーティクルを展開する。初期設定では0.5m以上近づくと消える\n","url":"https://booth.pm/ja/items/1110501","offers":{"priceCurrency":"JPY","@type":"Offer","price":"460"},"image":"https://booth.pximg.net/c/620x620/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1110501/aed2b23d-d9c7-4188-9276-0b641e2ed11b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="12xp/8MuOFsKWQMoKKofdx+Q66FFYMXPzCgBQdRyFDg="></script>
+    nonce="LzkkiC6uyRAOUAjQ0cN4qE4CT+8Sd4xwuZRisvabjrc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1110501/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               224
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1110501/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               224
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
